Fix issue with stretched icons

--- a/src/CryptoCard/IconLine/styles.scss
+++ b/src/CryptoCard/IconLine/styles.scss
@@ -29,7 +29,6 @@
 
     img {
       height: 100%;
-      width: 100%;
     }
   }
 
